--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noelalfonsomiranda/simple-social-share"
+  },
+  "bugs": {
+    "url": "https://github.com/noelalfonsomiranda/simple-social-share/issues"
+  },
   "author": "Noel Alfonso Miranda",
   "license": "MIT"
 }
